data/derived/comb/progs/unify/prog6090.ml.out
Characters 168-175:
  if (sum + r) > 9 then (carryFunc (sum+r),((sum+r) mod 10)::v) 
                                   ^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
